--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-12-04 : </strong></strong>Budgie edition 421.151204.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
+<li><strong>2015-12-04 : </strong></strong>BareBones edition 421.151204.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 <li><strong>2015-12-01 : </strong></strong>XFCE edition 421.151201.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-12-01 : </strong></strong>Cinnamon edition 421.151201.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
-<li><strong>2015-11-29 : </strong></strong>BareBones edition 421.151129.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
+<li><strong>2015-11-29 : </strong></strong>BareBones edition 421.151129.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 <li><strong>2015-11-27 : </strong></strong>XFCE edition 421.151127.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-11-26 : </strong></strong>Budgie edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
 <li><strong>2015-11-26 : </strong></strong>XFCE edition 421.151126.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
@@ -145,19 +147,19 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/31befc4995c51f826a589b3e414137f9/GeckoLinux_Budgie.x86_64-421.151126.0.iso">
+        <a href="https://susestudio.com/download/70f40dfbe5f88b09c744286570660502/GeckoLinux_Budgie.x86_64-421.151204.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151126.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151204.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/e043b971fd6faf1c575debb2ab812ec9/GeckoLinux_BareBones.x86_64-421.151129.0.iso">
+        <a href="https://susestudio.com/download/07d1bf9148bbd7e6ea9a09db92e9791e/GeckoLinux_BareBones.x86_64-421.151204.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>Download GeckoLinux BareBones edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151129.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151204.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
