--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-12-08 : </strong></strong>Cinnamon edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2015-12-08 : </strong></strong>XFCE edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
+<li><strong>2015-12-08 : </strong></strong>Budgie edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
+<li><strong>2015-12-08 : </strong></strong>BareBones edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
+
 <li><strong>2015-12-05 : </strong></strong>Cinnamon edition 421.151205.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-12-05 : </strong></strong>XFCE edition 421.151205.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-12-05 : </strong></strong>Budgie edition 421.151205.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
@@ -116,37 +121,37 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/d965b8c84a6fde9e3f8285505c27b72a/GeckoLinux_Cinnamon.x86_64-421.151205.0.iso">
+        <a href="https://susestudio.com/download/c99e255bdcb6aa94b3eaaff099be6324/GeckoLinux_Cinnamon.x86_64-421.151208.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>Download GeckoLinux Cinnamon edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151205.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/7e20b041db0c65d4b22aab364dc06a57/GeckoLinux_XFCE.x86_64-421.151205.0.iso">
+        <a href="https://susestudio.com/download/4e6d5c0f61c2319c6b1286ba3cf93b4b/GeckoLinux_XFCE.x86_64-421.151208.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>Download GeckoLinux XFCE edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151205.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/2a710a87d77dcdb4916aa020a4aea704/GeckoLinux_Budgie.x86_64-421.151205.0.iso">
+        <a href="https://susestudio.com/download/6c391398fae3b360ee2d92d6812ce7d6/GeckoLinux_Budgie.x86_64-421.151208.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151205.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/d1373bc4798fdb864b6c51ba3129ca2d/GeckoLinux_BareBones.x86_64-421.151205.0.iso">
+        <a href="https://susestudio.com/download/d05449b440f7fded5f4321a19e2e0480/GeckoLinux_BareBones.x86_64-421.151208.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>Download GeckoLinux BareBones edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151205.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
