--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 <ul class="slideshow">
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" title="GeckoLinux Cinnamon edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png" title="GeckoLinux XFCE edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png" title="GeckoLinux Gnome edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>
+  
 </ul>
 
 <style>
@@ -53,6 +55,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-12-10 : </strong></strong>Gnome edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+
 <li><strong>2015-12-08 : </strong></strong>Cinnamon edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-12-08 : </strong></strong>XFCE edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 <li><strong>2015-12-08 : </strong></strong>Budgie edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie">release notes</a>)</li>
@@ -137,6 +141,17 @@ figcaption {
         </figcaption>
       </figure>
     </div>
+    <div class="col">
+      <figure>
+        <a href="https://susestudio.com/download/d9cb3a683909741fa3506996ed5d66f2/GeckoLinux_Gnome.x86_64-421.151210.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
+        <figcaption>Download GeckoLinux Gnome edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.151210.0">(SuseStudio TestDrive)</a>
+        </figcaption>
+      </figure>
+    </div>
+</div>
+<div class="row">
     <div class="col">
       <figure>
         <a href="https://susestudio.com/download/6c391398fae3b360ee2d92d6812ce7d6/GeckoLinux_Budgie.x86_64-421.151208.0.iso">
