--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@ figcaption {
         </figcaption>
       </figure>
     </div>
+    <div class="col">
+      <figure>
+        <a href="http://">
+        <img src="https://"></a>
+        <figcaption>&nbsp;
+                </br> <a href="https://">&nbsp;</a>
+        </figcaption>
+      </figure>
+    </div>
 </div>
 
 <h3><a id="who" class="anchor" href="#who" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who Are You?</h3>
