--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png" title="GeckoLinux XFCE edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png" title="GeckoLinux Gnome edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>
-  
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
 </ul>
 
 <style>
@@ -55,7 +55,9 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
-<li><strong>2015-12-10 : </strong></strong>Gnome edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
+<li><strong>2015-12-19 : </strong></strong>Mate edition 421.151218.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">Initial release</a>)</li>  
+  
+<li><strong>2015-12-10 : </strong></strong>Gnome edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">Initial release</a>)</li>
 
 <li><strong>2015-12-08 : </strong></strong>Cinnamon edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2015-12-08 : </strong></strong>XFCE edition 421.151208.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
@@ -163,19 +165,19 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/d05449b440f7fded5f4321a19e2e0480/GeckoLinux_BareBones.x86_64-421.151208.0.iso">
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
-        <figcaption>Download GeckoLinux BareBones edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+        <a href="https://susestudio.com/download/beb3458e94d594919834638ee411abbb/GeckoLinux_Mate.x86_64-421.151218.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
+        <figcaption>Download GeckoLinux Mate Edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.151218.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
     <div class="col">
       <figure>
-        <a href="http://">
-        <img src="https://"></a>
-        <figcaption>&nbsp;
-                </br> <a href="https://">&nbsp;</a>
+        <a href="https://susestudio.com/download/d05449b440f7fded5f4321a19e2e0480/GeckoLinux_BareBones.x86_64-421.151208.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
+        <figcaption>Download GeckoLinux BareBones edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
