--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png" title="GeckoLinux Gnome edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png" title="GeckoLinux Plasma 5 edition" alt="&nbsp;" width="100%"></a></li>
 </ul>
 
 <style>
@@ -55,6 +56,9 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2015-12-20 : </strong></strong>Plasma 5 edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">Initial release</a>)</li>
+
+<li><strong>2015-12-20 : </strong></strong>Mate edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>  
 <li><strong>2015-12-18 : </strong></strong>Mate edition 421.151218.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">Initial release</a>)</li>  
   
 <li><strong>2015-12-10 : </strong></strong>Gnome edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">Initial release</a>)</li>
@@ -156,14 +160,14 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/6c391398fae3b360ee2d92d6812ce7d6/GeckoLinux_Budgie.x86_64-421.151208.0.iso">
-        <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
-        <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+        <a href="https://susestudio.com/download/c225b657139ac4d8e04525b9716eb159/GeckoLinux_Plasma5.x86_64-421.151220.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
+        <figcaption>Download GeckoLinux Plasma 5 edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5/start_testdrive?version=421.151220.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
-    <div class="col">
+        <div class="col">
       <figure>
         <a href="https://susestudio.com/download/beb3458e94d594919834638ee411abbb/GeckoLinux_Mate.x86_64-421.151218.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
@@ -174,12 +178,30 @@ figcaption {
     </div>
     <div class="col">
       <figure>
+        <a href="https://susestudio.com/download/6c391398fae3b360ee2d92d6812ce7d6/GeckoLinux_Budgie.x86_64-421.151208.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
+        <figcaption>Download GeckoLinux Budgie edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+        </figcaption>
+      </figure>
+    </div>
+</div>
+<div class="row">
+    <div class="col">
+      <figure>
         <a href="https://susestudio.com/download/d05449b440f7fded5f4321a19e2e0480/GeckoLinux_BareBones.x86_64-421.151208.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>Download GeckoLinux BareBones edition
                 </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
+    </div>
+    <div class="col">
+      <p>&nbsp;</p>
+    </div>
+    </div>
+    <div class="col">
+      <p>&nbsp;</p>
     </div>
 </div>
 
