--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ figcaption {
       <figure>
         <a href="https://susestudio.com/download/beb3458e94d594919834638ee411abbb/GeckoLinux_Mate.x86_64-421.151218.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
-        <figcaption>Download GeckoLinux Mate Edition
+        <figcaption>Download GeckoLinux Mate edition
                 </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.151218.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
