--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 <li><strong>2015-12-20 : </strong></strong>Plasma 5 edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">Initial release</a>)</li>
+<li><strong>2015-12-20 : </strong></strong>Mate edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
+<li><strong>2015-12-20 : </strong></strong>BareBones edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 
-<li><strong>2015-12-20 : </strong></strong>Mate edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>  
 <li><strong>2015-12-18 : </strong></strong>Mate edition 421.151218.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">Initial release</a>)</li>  
   
 <li><strong>2015-12-10 : </strong></strong>Gnome edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">Initial release</a>)</li>
@@ -189,10 +190,10 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/d05449b440f7fded5f4321a19e2e0480/GeckoLinux_BareBones.x86_64-421.151208.0.iso">
+        <a href="https://susestudio.com/download/d7537c923559946b59a722661df999b8/GeckoLinux_BareBones.x86_64-421.151220.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11405426/99b1f312-9375-11e5-8fe1-f7529eb993ff.jpg"></a>
         <figcaption>Download GeckoLinux BareBones edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151220.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
