--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png" title="GeckoLinux Plasma 5 edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png" title="GeckoLinux LXQt edition" alt="&nbsp;" width="100%"></a></li>
 </ul>
 
 <style>
@@ -56,7 +57,9 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
-<li><strong>2015-12-20 : </strong></strong>Plasma 5 edition 421.151210.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">Initial release</a>)</li>
+<li><strong>2015-12-20 : </strong></strong>LXQt edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">Initial release</a>)</li>
+
+<li><strong>2015-12-20 : </strong></strong>Plasma 5 edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">Initial release</a>)</li>
 <li><strong>2015-12-20 : </strong></strong>Mate edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
 <li><strong>2015-12-20 : </strong></strong>BareBones edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-barebones">release notes</a>)</li>
 
@@ -157,9 +160,7 @@ figcaption {
         </figcaption>
       </figure>
     </div>
-</div>
-<div class="row">
-    <div class="col">
+   <div class="col">
       <figure>
         <a href="https://susestudio.com/download/21ea8e38d0bf6cba0019629ba7fe51ce/GeckoLinux_Plasma5.x86_64-421.151220.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
@@ -168,7 +169,9 @@ figcaption {
         </figcaption>
       </figure>
     </div>
-        <div class="col">
+</div>
+<div class="row">
+    <div class="col">
       <figure>
         <a href="https://susestudio.com/download/033cf8ac654016bc070ed63b86130690/GeckoLinux_Mate.x86_64-421.151220.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
@@ -186,8 +189,15 @@ figcaption {
         </figcaption>
       </figure>
     </div>
-</div>
-<div class="row">
+    <div class="col">
+      <figure>
+        <a href="https://susestudio.com/download/b36dd5f778622ea5f6ea689a1c2158c5/GeckoLinux_LXQt.x86_64-421.151222.0.iso">
+        <img src="https://cloud.githubusercontent.com/assets/2692138/11956434/2d5f7982-a888-11e5-9d25-5cd86a5028af.png"></a>
+        <figcaption>Download GeckoLinux LXQt edition
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt/start_testdrive?version=421.151222.0">(SuseStudio TestDrive)</a>
+        </figcaption>
+      </figure>
+    </div>
     <div class="col">
       <figure>
         <a href="https://susestudio.com/download/d7537c923559946b59a722661df999b8/GeckoLinux_BareBones.x86_64-421.151220.0.iso">
@@ -196,13 +206,6 @@ figcaption {
                 </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-barebones/start_testdrive?version=421.151220.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
-    </div>
-    <div class="col">
-      <p>&nbsp;</p>
-    </div>
-    </div>
-    <div class="col">
-      <p>&nbsp;</p>
     </div>
 </div>
 
