--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
 <li><strong>2015-12-22 : </strong></strong>LXQt edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">Initial release</a>)</li>
+<li><strong>2015-12-22 : </strong></strong>XFCE edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 
 <li><strong>2015-12-20 : </strong></strong>Plasma 5 edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">Initial release</a>)</li>
 <li><strong>2015-12-20 : </strong></strong>Mate edition 421.151220.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
@@ -144,10 +145,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/4e6d5c0f61c2319c6b1286ba3cf93b4b/GeckoLinux_XFCE.x86_64-421.151208.0.iso">
+        <a href="https://susestudio.com/download/aed909679f5066c445771e77a537ac29/GeckoLinux_XFCE.x86_64-421.151222.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>Download GeckoLinux XFCE edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151222.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
