--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11381655/3dfa5bc2-92cb-11e5-8dd8-d3a14144a5f1.png" title="GeckoLinux Cinnamon edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png" title="GeckoLinux XFCE edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png" title="GeckoLinux Gnome edition" alt="&nbsp;" width="100%"></a></li>
-    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png" title="GeckoLinux Budgie edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/12073076/1db4fe52-b0d6-11e5-858d-2d1eb0e6762a.png" title="GeckoLinux Budgie v10 edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png" title="GeckoLinux Plasma 5 edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png" title="GeckoLinux LXQt edition" alt="&nbsp;" width="100%"></a></li>
@@ -57,6 +57,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2016-01-01 : </strong></strong>Budgie edition 421.160101.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie--2">release notes</a>)</li>  
+  
 <li><strong>2015-12-22 : </strong></strong>LXQt edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">Initial release</a>)</li>
 <li><strong>2015-12-22 : </strong></strong>XFCE edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>
 
@@ -183,10 +185,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/6c391398fae3b360ee2d92d6812ce7d6/GeckoLinux_Budgie.x86_64-421.151208.0.iso">
+        <a href="https://susestudio.com/download/c0e4cc272459cd519b737c5fc01981df/GeckoLinux_Budgie.x86_64-421.160101.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie--2/start_testdrive?version=421.160101.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
