--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2016-01-03 : </strong></strong>Budgie edition 421.160103.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
+
 <li><strong>2016-01-01 : </strong></strong>Budgie edition 421.160101.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
   
 <li><strong>2015-12-22 : </strong></strong>LXQt edition 421.151222.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-lxqt">Initial release</a>)</li>
@@ -185,10 +187,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/c0e4cc272459cd519b737c5fc01981df/GeckoLinux_Budgie.x86_64-421.160101.0.iso">
+        <a href="https://susestudio.com/download/42b290941f628a108843c6f19970780f/GeckoLinux_Budgie10.x86_64-421.160103.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11374090/54769a2e-92a2-11e5-8237-9a2dbd91c364.png"></a>
         <figcaption>Download GeckoLinux Budgie edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160101.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10/start_testdrive?version=421.160103.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
