--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11413918/e5faf1fa-93bc-11e5-87a6-91c8506f8f1e.png" title="GeckoLinux XFCE edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11734281/a84e665c-9f83-11e5-96c3-6941b87e79cf.png" title="GeckoLinux Gnome edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11404706/58186926-9371-11e5-9cc8-c85cdc5a5692.png"><img src="https://cloud.githubusercontent.com/assets/2692138/12073076/1db4fe52-b0d6-11e5-858d-2d1eb0e6762a.png" title="GeckoLinux Budgie v10 edition" alt="&nbsp;" width="100%"></a></li>
-    <li><a href="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11911489/e3d36a30-a5e4-11e5-9156-e6fae3a36ba1.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
+    <li><a href="https://cloud.githubusercontent.com/assets/2692138/12274903/1d126a30-b93b-11e5-9726-a73538ca6567.png"><img src="https://cloud.githubusercontent.com/assets/2692138/12274903/1d126a30-b93b-11e5-9726-a73538ca6567.png" title="GeckoLinux Mate edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11913096/8a02e6c4-a626-11e5-91cf-038aa2c6e1b9.png" title="GeckoLinux Plasma 5 edition" alt="&nbsp;" width="100%"></a></li>
     <li><a href="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png"><img src="https://cloud.githubusercontent.com/assets/2692138/11956448/4304f9ec-a888-11e5-9fa0-9339f107129a.png" title="GeckoLinux LXQt edition" alt="&nbsp;" width="100%"></a></li>
 </ul>
@@ -57,6 +57,9 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2016-01-12 : </strong></strong>Cinnamon edition 421.160112.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
+<li><strong>2016-01-12 : </strong></strong>Mate edition 421.160112.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
+
 <li><strong>2016-01-03 : </strong></strong>Budgie edition 421.160103.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
 
 <li><strong>2016-01-01 : </strong></strong>Budgie edition 421.160101.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-budgie10">release notes</a>)</li>  
@@ -140,10 +143,10 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/c99e255bdcb6aa94b3eaaff099be6324/GeckoLinux_Cinnamon.x86_64-421.151208.0.iso">
+        <a href="https://susestudio.com/download/3122ee0d193d0174eb6c4f3903a8ba66/GeckoLinux_Cinnamon.x86_64-421.160112.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373681/4f073e64-92a1-11e5-8ef0-cf8b778cb5cf.jpg"></a>
         <figcaption>Download GeckoLinux Cinnamon edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.151208.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon/start_testdrive?version=421.160112.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
@@ -178,10 +181,10 @@ figcaption {
 <div class="row">
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/033cf8ac654016bc070ed63b86130690/GeckoLinux_Mate.x86_64-421.151220.0.iso">
+        <a href="https://susestudio.com/download/c06a63c49dba407a58950cd6c4c37eea/GeckoLinux_Mate.x86_64-421.160112.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11911482/ab09c4d8-a5e4-11e5-96a1-5b38a8f928f5.png"></a>
         <figcaption>Download GeckoLinux Mate edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.151220.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-mate/start_testdrive?version=421.160112.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
