--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ figcaption {
 
 
 <footer class="site-footer">
-  <span class="site-footer-credits">.</span>
+  <span class="site-footer-credits">&nbsp;</span>
 </footer>
 
 </section>
