--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2016-01-13 : </strong></strong>Plasma 5 edition 421.160113.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">release notes</a>)</li>
+
 <li><strong>2016-01-12 : </strong></strong>Cinnamon edition 421.160112.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
 <li><strong>2016-01-12 : </strong></strong>Mate edition 421.160112.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-mate">release notes</a>)</li>
 
@@ -170,10 +172,10 @@ figcaption {
     </div>
    <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/21ea8e38d0bf6cba0019629ba7fe51ce/GeckoLinux_Plasma5.x86_64-421.151220.0.iso">
+        <a href="https://susestudio.com/download/6cabdbb7e58040cb3af7cdb1a81940f3/GeckoLinux_Plasma5.x86_64-421.160113.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11913089/5b5a4722-a626-11e5-925d-cd52cb491fad.png"></a>
         <figcaption>Download GeckoLinux Plasma 5 edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5/start_testdrive?version=421.151220.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5/start_testdrive?version=421.160113.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
