--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2016-01-14 : </strong></strong>XFCE edition 421.160114.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>  
+  
 <li><strong>2016-01-13 : </strong></strong>Plasma 5 edition 421.160113.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">release notes</a>)</li>
 
 <li><strong>2016-01-12 : </strong></strong>Cinnamon edition 421.160112.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-cinnamon">release notes</a>)</li>
@@ -154,10 +156,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/aed909679f5066c445771e77a537ac29/GeckoLinux_XFCE.x86_64-421.151222.0.iso">
+        <a href="https://susestudio.com/download/b51cb9e4f649ad77bb623ccb88cad3a8/GeckoLinux_XFCE.x86_64-421.160114.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11373686/52ad351e-92a1-11e5-88c5-5c124301b8d7.png"></a>
         <figcaption>Download GeckoLinux XFCE edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.151222.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-xfce/start_testdrive?version=421.160114.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
