--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
 <h4><a id="news" class="anchor" href="#news" aria-hidden="true"><span class="octicon octicon-link"></span></a>News</h4>
 <ul>
+<li><strong>2016-01-14 : </strong></strong>Gnome edition 421.160114.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-gnome">release notes</a>)</li>
+
 <li><strong>2016-01-14 : </strong></strong>XFCE edition 421.160114.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-xfce">release notes</a>)</li>  
   
 <li><strong>2016-01-13 : </strong></strong>Plasma 5 edition 421.160113.0 (<a href="https://susestudio.com/a/OO38wm/geckolinux-plasma5">release notes</a>)</li>
@@ -165,10 +167,10 @@ figcaption {
     </div>
     <div class="col">
       <figure>
-        <a href="https://susestudio.com/download/d9cb3a683909741fa3506996ed5d66f2/GeckoLinux_Gnome.x86_64-421.151210.0.iso">
+        <a href="https://susestudio.com/download/52faf45f02db4b1a90fad0cf1759ba10/GeckoLinux_Gnome.x86_64-421.160114.0.iso">
         <img src="https://cloud.githubusercontent.com/assets/2692138/11734338/69d405e8-9f84-11e5-9559-1b4b0f0d0d8f.png"></a>
         <figcaption>Download GeckoLinux Gnome edition
-                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.151210.0">(SuseStudio TestDrive)</a>
+                </br> <a href="https://susestudio.com/a/OO38wm/geckolinux-gnome/start_testdrive?version=421.160114.0">(SuseStudio TestDrive)</a>
         </figcaption>
       </figure>
     </div>
